<resources>
    <string name="app_name">Cleaning Services</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="username">إسم المستخدم</string>
    <string name="forget_password">نسيت كلمة المرور ؟</string>
    <string name="create_account_q">ليس لديك حساب ؟ <font color="#18573A">أنشا حساب</font></string>
    <string name="privacy_agree">عند تسجيلك فأنت توافق على <font color="#FF9100"><u>الأحكام و الشروط</u></font></string>
    <string name="username_req">يجب عليك إدخال إسم المستخدم الخاص بك</string>
    <string name="email_req">يجب ادخال بريد الكتروني</string>
    <string name="valid_email_req">يجب ادخال بريد الكتروني صالح</string>
    <string name="password_req">يجب ادخال كلمة المرور</string>
    <string name="valid_password_req">يجب ادخال كلمة مرور اكبر من 6 احرف</string>
    <string name="email_used">البريد الإلكتروني مرتبط بحساب آخر</string>
    <string name="failed_to_add_account">فشل إنشاء الحساب</string>
    <string name="have_account_q">هل لديك حساب ؟ <font color="#18573A">تسجيل دخول</font></string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="sign_up">إنشاء حساب</string>
    <string name="account_create_success">تم إنشاء الحساب بنجاح الرجاء الإنتظار</string>
    <string name="error_sign_in">حدث خطأ اثناء تسجيل الدخول 🙄</string>
    <string name="or">أو</string>
    <string name="discount_card">أحصل على خصم 40%\nلأي خدمة تنظيف</string>
    <string name="discount_card_end_date">حتى تاريخ 30/04/2021</string>
    <string name="take_ticket_now"><font><u>إحجز الآن</u></font></string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="search_hint">البحث</string>
    <string name="cleaning">تنظيف</string>
    <string name="fixing">صيانة</string>
    <string name="washing">غسيل</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myServices">خدماتي</string>
    <string name="Notification">Notification</string>
    <string name="newService">خدمة جديدة</string>
    <string name="services">خدماتنا</string>
    <string name="show_all">عرض الكل</string>
    <string name="error_occurred">حدث خطأ</string>
    <string name="no_services_for_type">عذرا ، لا توجد خدمات فرعية لهذه الخدمة</string>
    <string name="enter_a_valid_data_in_db">قم بإدخال بيانات صحيحة في قاعدة البيانات</string>
    <string name="chooseServices">اختر الخدمات المطلوبة</string>
    <string name="choose_place">إختر نوع المكان</string>
    <string name="place_size">حجم المكان</string>
    <string name="per_hour"> لكل ساعة $<font color="#18573A">%1$d</font></string>
    <string name="four_ours">ساعات<font color="#18573A">%1$d</font></string>
    <string name="confirm_operations">تأكيد العمليات المطلوبة</string>
    <string name="completed">مكتملة</string>
    <string name="pending">بالإنتظار</string>
    <string name="service_number">رقم الخدمة - %1$d</string>
    <string name="required_price">المبلغ المستحق لكل ساعة - %1$d $/لكل ساعة</string>
    <string name="location">شارع النزلة - شمال غزة</string>
    <string name="time">05:00 م</string>
    <string name="remind_days">متبقي %1$d يوم</string>
    <string name="my_services">خدماتي</string>
    <string name="fill_all_bottomSheet">يجب ملئ كل البيانات قبل الاستمرار</string>
    <string name="added_successfully">تمت الاضاقة بنجاح</string>
    <string name="failed_toAdd">تمت الاضاقة بنجاح</string>
    <string name="failed_to_send_email">فشل ارسال اعادة تعيين كلمة المرور</string>
    <string name="success_to_send_email">تم ارسال اعادة تعيين كلمة المرور بنجاح</string>
    <string name="send_code">ارسال الرمز</string>
</resources>