<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:background="@drawable/top_bottom_sheet_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintVertical_bias="0.0"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etChoosePlaceLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/choose_place"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxStrokeColor="@color/red"
                app:errorEnabled="true"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <AutoCompleteTextView
                    android:id="@+id/etChoosePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="none"
                    android:textAlignment="viewStart" />
            </com.google.android.material.textfield.TextInputLayout>

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etChoosePlaceLayout"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/place_size"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/calendarView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendarView"
                app:layout_constraintVertical_bias="0.0" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/calendarView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/calendarView"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/seekBar"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/seekBar"
                app:layout_constraintTop_toBottomOf="@+id/seekBar"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="الوقت اللازم لتنفيذ المهمة"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4 ساعات"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:text="إجمالي المبلغ"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_hour"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/confirm_button_shape"
                android:text="@string/confirm_operations"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView14"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvTime"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>